Desarrollo tarea 5 parte dos maverl y pokemosn

--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tarea 5 Fronthend</title>
-    <script src="script.js"></script>
+
 </head>
 <body>
-    
+    <h3>Tareas realizadas</h3>
 </body>
+  <script src="script.js"></script>
+  <script src="script2.js"></script>
 </html>
